# simple-presense-service

./: CMakeLists.txt  CONTRIBUTING.md  HISTORY  Makefile.am  README.md  configure.ac  err-msg.cpp  err-msg.h  mem-presence.cpp  mem-presence.h  presence-item.cpp  presence-item.h  presence.cpp  presence.h  simple-presence-client.cpp  simple-presence-service.cpp  simple-presense-service.cpp  uv-client.cpp  uv-client.h  uv-listener.cpp  uv-listener.h
